fixed admin page htmls and combine all those css files into custom-tom.css....

--- a/freshshop-master_1차/adminpage11counseloneonone-tom.html
+++ b/freshshop-master_1차/adminpage11counseloneonone-tom.html
@@ -121,7 +121,7 @@
             <col style="width:7%; height:2%;"> 1:1상담 계시판 이용을 위해 주석처리함... on Nov 30th, 14:51pm by thomas -->
             <!--consider binding the custom-tom.css file. this comment was left on november 25th 20:34pm by thomas lee-->
           </colgroup>
-          <thead style="background-color: lightgray">
+          <thead class="admintablehead"> 
             <tr>
               <th>#</th>
               <th>ID</th>
