--- a/freshshop-master_1차/adminpage13donationmanage-tom.html
+++ b/freshshop-master_1차/adminpage13donationmanage-tom.html
@@ -89,24 +89,30 @@
   </header>
   <!--adminmainvetmanagement-->
     <div> 
-        <h1 style="text-align: center; font-size:30px; margin-top:5%;">후원금 관리</h1>
+        <h1 class="adminpagetoph1">후원금 관리</h1>
     </div>
-    <div class="donationmanage" style="margin-top: 40px;">
-      <table class="table-striped table-hover" style="margin-left: auto; margin-right: auto; text-align: center;">
-           <thead> 
+    <div id="admindonationmanage" class="adminpagetablediv">
+      <table class="table-striped table-hover adminpagetable">
+          <colgroup>
+            <col>
+            <col>
+            <col>
+            <col>
+          </colgroup>
+           <thead class="admintablehead"> 
               <tr>
-                  <th>#</th>
-                  <th>ID</th>
-                  <th>기부금</th>
-                  <th>등록일</th>
+                  <th class="admin-userseq">#</th>
+                  <th class="admin-userid">ID</th>
+                  <th class="admin-userdonation">기부금</th>
+                  <th class="admin-userregdate">등록일</th>
               </tr>
           </thead>
           <tbody>
             <tr>
-                <td>1</td>
-                <td>thomas</td>
-                <td>10,000 won</td>
-                <td>2021-11-17</td>
+                <td class="admin-userseq">1</td>
+                <td class="admin-userid">thomas</td>
+                <td class="admin-userdonation">10,000 won</td>
+                <td class="admin-userregdate">2021-11-24 16:54:38</td>
             </tr>
             <tr>
                 <td>2</td>
