--- a/freshshop-master_1차/adminpage9communitymanage-tom.html
+++ b/freshshop-master_1차/adminpage9communitymanage-tom.html
@@ -121,7 +121,7 @@
             <col style="width:7%; height:2%;">
             <!--consider binding the custom-tom.css file. this comment was left on november 25th 20:34pm by thomas lee-->
           </colgroup>
-          <thead style="background-color: lightgray">
+          <thead class="admintablehead"> 
             <tr>
                 <th>#</th>
                 <th>ID</th>
