--- a/freshshop-master_1차/adminpage6sheltermanage-tom.html
+++ b/freshshop-master_1차/adminpage6sheltermanage-tom.html
@@ -123,7 +123,7 @@
                 <col style="width:7%; height:2%;">
                 <!--consider binding the custom-tom.css file. this comment was left on november 25th 20:34pm by thomas lee-->
               </colgroup>
-              <thead style="background-color: lightgray">
+              <thead class="admintablehead"> 
                 <tr>
                       <th>#</th>
                       <th>이름</th>
