adminpage's list html are fixed...

--- a/freshshop-master_1차/adminpage13donationmanage-tom.html
+++ b/freshshop-master_1차/adminpage13donationmanage-tom.html
@@ -88,9 +88,21 @@
     <!-- End Navigation --> <!--관리자 페이지 공통 부분 완료...-->
   </header>
   <!--adminmainvetmanagement-->
-    <div> 
+    <div class="tbl-header"> 
         <h1 class="adminpagetoph1">후원금 관리</h1>
     </div>
+        <!-- search 버튼 시작 -->
+        <div class="row tbl-header">
+          <div class="main-search-input-wrap" >
+              <div class="main-search-input fl-wrap">
+                  <div class="main-search-input-item"> 
+                      <input type="text" value="" placeholder="검색창입니다."> 
+                  </div> 
+                <button class="main-search-button">Search</button>
+              </div>
+          </div>
+        </div>
+        <!--search button finished...-->    
     <div id="admindonationmanage" class="adminpagetablediv">
       <table class="table-striped table-hover adminpagetable">
           <colgroup>
