--- a/freshshop-master_1차/adminpage4usermanage-tom.html
+++ b/freshshop-master_1차/adminpage4usermanage-tom.html
@@ -76,7 +76,7 @@
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="navbar-menu">
                 <ul class="nav navbar-nav ml-auto" data-in="fadeInDown" data-out="fadeOutUp">
-                    <li class="nav-item active"><a class="nav-link" href="adminpage2vetmange-tom.html"> 제휴병원 관리</a></li>
+                    <li class="nav-item"><a class="nav-link" href="adminpage2vetmange-tom.html"> 제휴병원 관리</a></li>
                     <li class="nav-item"><a class="nav-link" href="adminpage4usermanage-tom.html"> 회원정보 관리</a></li>
                     <li class="nav-item"><a class="nav-link" href="adminpage6sheltermanage-tom.html"> 보호소정보 관리</a></li>
                     <li class="nav-item"><a class="nav-link" href="adminpage9communitymanage-tom.html"> 커뮤니티 게시판 관리</a></li>
@@ -90,15 +90,15 @@
     <!-- End Navigation --> <!--관리자 페이지 공통 부분 완료...-->
   </header>
   <!--관리자의 회원정보 관리 페이지 시작...-->
-    <div> 
-        <h1 style="text-align: center; font-size:30px; margin-top:5%;">회원정보 관리</h1>
+  <div class="tbl-header"> 
+    <h1 class="adminpagetoph1">회원정보 관리</h1>
     </div>
         <!-- search 버튼 시작 -->
-        <div class="row">
+        <div class="row tbl-header">
           <div class="main-search-input-wrap" >
-              <div class="main-search-input fl-wrap" style="margin-top: 30px;">
+              <div class="main-search-input fl-wrap">
                   <div class="main-search-input-item"> 
-                      <input type="text" value="" placeholder="Search Products..."> 
+                      <input type="text" value="" placeholder="검색창입니다."> 
                   </div> 
                 <button class="main-search-button">Search</button>
               </div>
@@ -120,7 +120,7 @@
                 <col>
                 <col>
                 <col>
-                <col style="background-color: white;">
+                <col>
               </colgroup>
               <thead class="admintablehead"> 
                 <tr>
@@ -133,7 +133,7 @@
                     <th class="admin-usernickname">회원닉네임</th>
                     <th class="admin-role">회원타입</th>
                     <th class="admin-userregdate">회원등록일</th>
-                    <th class="admin-useractionbutton" style="background-color: white;"></th>
+                    <th class="admin-useractionbutton"></th>
                 </tr>
               </thead>
               <tbody>
@@ -147,7 +147,7 @@
                     <td class="admin-usernickname">고결이즈고결354</td>
                     <td class="admin-role">일반</td>
                     <td class="admin-userregdate">2021-11-28 16:54:38</td>
-                    <td class="admin-useractionbutton" style="background-color: white;"><button class="adminpagebuttonformanage" type="button" onclick="location.href='adminpage5usermodify-tom.html'">관리하기</button></td>
+                    <td class="admin-useractionbutton"><button class="adminpagebuttonformanage" type="button" onclick="location.href='adminpage5usermodify-tom.html'">수정</button></td>
                 </tr>
                 <tr>
                     <td>2</td>
@@ -159,7 +159,7 @@
                     <td>톰은나의닉네임</td>
                     <td>관리자</td>
                     <td>2021-11-29 16:54:38</td>
-                    <td><button class="adminpagebuttonformanage"  type="button" onclick="location.href='adminpage5usermodify-tom.html'">관리하기</button></td>
+                    <td><button class="adminpagebuttonformanage" type="button" onclick="location.href='adminpage5usermodify-tom.html'">수정</button></td>
                 </tr>
                 <tr>
                     <td>3</td>
@@ -171,7 +171,7 @@
                     <td>재석이는슈퍼스타</td>
                     <td>관리자</td>
                     <td>2021-11-29 18:54:38</td>                  
-                    <td><button class="adminpagebuttonformanage"  type="button" onclick="location.href='adminpage5usermodify-tom.html'">관리하기</button></td>
+                    <td><button class="adminpagebuttonformanage" type="button" onclick="location.href='adminpage5usermodify-tom.html'">수정</button></td>
                 </tr>
                 <tr>
                     <td>4</td>
@@ -183,7 +183,7 @@
                     <td>도움과소화전</td>
                     <td>일반</td>
                     <td>2021-11-29 19:54:38</td>                      
-                    <td><button class="adminpagebuttonformanage"  type="button" onclick="location.href='adminpage5usermodify-tom.html'">관리하기</button></td>
+                    <td><button class="adminpagebuttonformanage" type="button" onclick="location.href='adminpage5usermodify-tom.html'">수정</button></td>
                 </tr>
                 <tr>
                     <td>5</td>
@@ -195,7 +195,7 @@
                     <td>실비아입니다</td>
                     <td>일반</td>
                     <td>2021-11-29 19:59:59</td>                     
-                    <td><button class="adminpagebuttonformanage"  type="button" onclick="location.href='adminpage5usermodify-tom.html'">관리하기</button></td>
+                    <td><button class="adminpagebuttonformanage" type="button" onclick="location.href='adminpage5usermodify-tom.html'">수정</button></td>
                 </tr>
               </tbody>
             </table>
