--- a/freshshop-master_1차/adminpage11counseloneonone-tom.html
+++ b/freshshop-master_1차/adminpage11counseloneonone-tom.html
@@ -90,15 +90,15 @@
     <!-- End Navigation --> <!--관리자 페이지 공통 부분 완료...-->
   </header>
   <!--adminmainvetmanagement-->
-    <div> 
-        <h1 style="text-align: center; font-size:30px; margin-top:5%;">1:1상담 관리</h1>
+    <div class="tbl-header"> 
+        <h1 class="adminpagetoph1">1:1상담 관리</h1>
     </div>
             <!-- search 버튼 시작 -->
-            <div class="row">
+            <div class="row tbl-header">
               <div class="main-search-input-wrap" >
-                  <div class="main-search-input fl-wrap" style="margin-top: 30px;">
+                  <div class="main-search-input fl-wrap">
                       <div class="main-search-input-item"> 
-                          <input type="text" value="" placeholder="Search Products..."> 
+                          <input type="text" value="" placeholder="검색창입니다."> 
                       </div> 
                     <button class="main-search-button">Search</button>
                   </div>
@@ -106,63 +106,56 @@
             </div>
             <!--search button finished...-->
             <!--1:1 상담 관리 리스트 시작-->
-    <div class="oneononecouncelmanage" style="margin-top: 40px;">
-        <table class="table-striped table-hover" style="margin-left: 3%; margin-right: 3%; text-align: center;">
-          <colgroup style ="margin-left: auto; margin-right: auto;">
-            <col style="width:3%; height:2%;">
-            <col style="width:5%; height:2%;">
-            <col style="width:8%; height:2%;">
-            <col style="width:12%; height:2%;">
-<!--            <col style="width:8%; height:2%;">
-            <col style="width:14%; height:2%;">
-            <col style="width:8%; height:2%;">
-            <col style="width:4%; height:2%;">
-            <col style="width:10%; height:2%;">
-            <col style="width:7%; height:2%;"> 1:1상담 계시판 이용을 위해 주석처리함... on Nov 30th, 14:51pm by thomas -->
-            <!--consider binding the custom-tom.css file. this comment was left on november 25th 20:34pm by thomas lee-->
-          </colgroup>
-          <thead class="admintablehead"> 
-            <tr>
-              <th>#</th>
-              <th>ID</th>
-              <th>상담 메세지</th>
-              <th>상담 요청 시간</th>
-          </tr>      
-          </thead>
-          <tbody>
-            <tr>
-                <td>2552 </td>
-                <td>rhruf11</td>
-                <td><a href="#" class="oneononecounsel">증상 좀 봐주세요~ ㅠ</a></td>
-                <td>2021-11-29 16:54:38</td>
-              </tr>
-            <tr>
-                <td>2551</td>
-                <td>rhruf11</td>
-                <td><a href="#" class="oneononecounsel"> 저희집 댕댕이가 이상한걸 삼켰어요!!! 응답 부탁드려요!!!~ ㅠ</a></td>
-                <td>2021-11-28 17:54:38</td>
-              </tr>
-            <tr>
-                <td>2550</td>
-                <td>rhruf11</td>
-                <td><a href="#" class="oneononecounsel">고양이 털이 자꾸 빠지고 피부에 염증나요!!</a></td>
-                <td>2021-11-27 11:54:38</td>
-            </tr>
-            <tr>
-                <td>2549</td>
-                <td>rhruf11</td>
-                <td><a href="#" class="oneononecounsel">인근에 가까운 병원이 검색이 안되요</a></td>
-                <td>2021-11-26 20:54:38</td>
-            </tr>
-            <tr>
-              <td>2548</td>
-              <td>rhruf11</td>
-              <td><a href="#" class="oneononecounsel">제 이용기록 지우고 싶어요!</a></td>
-              <td>2021-11-26 20:54:38</td>
-            </tr>
-          </tbody>
-        </table>
-    </div>
+              <div id="oneononecouncelmanage" class="adminpagetablediv">
+                  <table class="table-striped table-hover adminpagetable">
+                    <colgroup>
+                      <col>
+                      <col>
+                      <col>
+                      <col>
+                    </colgroup>
+                    <thead class="admintablehead"> 
+                      <tr>
+                        <th class="admin-userseq">#</th>
+                        <th class="admin-userid">ID</th>
+                        <th class="admin-useroneononecounseltitle">상담 메세지</th>
+                        <th class="admin-useroneononecounselregdate">상담 요청 시간</th>
+                    </tr>      
+                    </thead>
+                    <tbody>
+                      <tr>
+                          <td>2552 </td>
+                          <td>rhruf11</td>
+                          <td><a href="#" class="oneononecounsel">증상 좀 봐주세요~ ㅠ</a></td>
+                          <td>2021-11-29 16:54:38</td>
+                        </tr>
+                      <tr>
+                          <td>2551</td>
+                          <td>rhruf11</td>
+                          <td><a href="#" class="oneononecounsel"> 저희집 댕댕이가 이상한걸 삼켰어요!!! 응답 부탁드려요!!!~ ㅠ</a></td>
+                          <td>2021-11-28 17:54:38</td>
+                        </tr>
+                      <tr>
+                          <td>2550</td>
+                          <td>rhruf11</td>
+                          <td><a href="#" class="oneononecounsel">고양이 털이 자꾸 빠지고 피부에 염증나요!!</a></td>
+                          <td>2021-11-27 11:54:38</td>
+                      </tr>
+                      <tr>
+                          <td>2549</td>
+                          <td>rhruf11</td>
+                          <td><a href="#" class="oneononecounsel">인근에 가까운 병원이 검색이 안되요</a></td>
+                          <td>2021-11-26 20:54:38</td>
+                      </tr>
+                      <tr>
+                        <td>2548</td>
+                        <td>rhruf11</td>
+                        <td><a href="#" class="oneononecounsel">제 이용기록 지우고 싶어요!</a></td>
+                        <td>2021-11-26 20:54:38</td>
+                      </tr>
+                    </tbody>
+                  </table>
+              </div>
 
 
   
