--- a/freshshop-master_1차/adminpage6sheltermanage-tom.html
+++ b/freshshop-master_1차/adminpage6sheltermanage-tom.html
@@ -76,7 +76,7 @@
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="navbar-menu">
                 <ul class="nav navbar-nav ml-auto" data-in="fadeInDown" data-out="fadeOutUp">
-                  <li class="nav-item active"><a class="nav-link" href="adminpage2vetmange-tom.html"> 제휴병원 관리</a></li>
+                  <li class="nav-item"><a class="nav-link" href="adminpage2vetmange-tom.html"> 제휴병원 관리</a></li>
                   <li class="nav-item"><a class="nav-link" href="adminpage4usermanage-tom.html"> 회원정보 관리</a></li>
                   <li class="nav-item"><a class="nav-link" href="adminpage6sheltermanage-tom.html"> 보호소정보 관리</a></li>
                   <li class="nav-item"><a class="nav-link" href="adminpage9communitymanage-tom.html"> 커뮤니티 게시판 관리</a></li>
@@ -90,15 +90,15 @@
     <!-- End Navigation --> <!--관리자 페이지 공통 부분 완료...-->
   </header>
   <!--보호소정보관리 페이지 시작-->
-    <div> 
-        <h1 style="text-align: center; font-size:30px; margin-top:5%;">보호소정보 관리</h1>
+  <div class="tbl-header"> 
+    <h1 class="adminpagetoph1">보호소정보 관리</h1>
     </div>
         <!-- search 버튼 시작 -->
-        <div class="row">
+        <div class="row tbl-header">
           <div class="main-search-input-wrap" >
-              <div class="main-search-input fl-wrap" style="margin-top: 30px;">
+              <div class="main-search-input fl-wrap">
                   <div class="main-search-input-item"> 
-                      <input type="text" value="" placeholder="Search Products..."> 
+                      <input type="text" value="" placeholder="검색창입니다..."> 
                   </div> 
                 <button class="main-search-button">Search</button>
               </div>
@@ -107,104 +107,73 @@
         <!--search button finished...-->
         <!--보호소정보 관리 리스트 시작-->
         <!--nov29th, table style margin left and right were changed from auto to 3%, colgroup were added with width % value -->
-        <div class="associatedvetcenterlist" style="margin-top: 40px;">
+        <div id="associatedvetcenterlist" class="adminpagetablediv">
           <!--<form id="thismustcalldbfrompawmapuser" action="must put method" name="POST" method="GET">--><!-- tom is working on this section on nov 26th 5:20pm-->
-            <table class="table-striped table-hover" style="margin-left: 3%; margin-right: 3%; text-align: center;">
-              <colgroup style ="margin-left: auto; margin-right: auto;">
-                <col style="width:3%; height:2%;">
-                <col style="width:5%; height:2%;">
-                <col style="width:8%; height:2%;">
-                <col style="width:12%; height:2%;">
-                <col style="width:8%; height:2%;">
-                <col style="width:14%; height:2%;">
-                <col style="width:8%; height:2%;">
-                <col style="width:4%; height:2%;">
-                <col style="width:10%; height:2%;">
-                <col style="width:7%; height:2%;">
-                <!--consider binding the custom-tom.css file. this comment was left on november 25th 20:34pm by thomas lee-->
+            <table class="table-striped table-hover adminpagetable">
+              <colgroup>
+                <col>
+                <col>
+                <col>
+                <col>
+                <col>
               </colgroup>
               <thead class="admintablehead"> 
                 <tr>
-                      <th>#</th>
-                      <th>이름</th>
-                      <th>사업자등록번호</th>
-                      <th>연락처</th>
-                      <th>5555</th>
-                      <th>6666</th>
-                      <th>7777</th>
-                      <th>8888</th>
-                      <th>관리</th>
-                      <th>액션</th>
+                      <th class="admin-userseq">#</th>
+                      <th class="admin-username">보호소 이름</th>
+                      <th class="admin-comnum">사업자등록번호</th>
+                      <th class="admin-usertelnum">연락처</th>
+                      <th class="admin-useractionbutton"></th>
                   </tr>
               </thead>
-              <tbody><!-- 4:49 pm on nov 29th tom is working on this section... -->
+              <tbody>
                 <tr>
-                    <td>1</td>
-                    <td>일산 보호소</td>
-                    <td>002-20-00010</td>
-                    <td>031-222-5432</td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td><button style="margin: auto; border-style: none; cursor:pointer;" type="button" onclick="location.href='adminpage8sheltermodify-tom.html'">관리하기</button></td>
-                    <td><button style="margin: auto; border-style: none; cursor:pointer;" type="button" onclick="location.href='#'">삭제</button></td>
+                    <td class="admin-userseq">1</td>
+                    <td class="admin-username">일산 보호소</td>
+                    <td class="admin-comnum">002-20-00010</td>
+                    <td class="admin-usertelnum">031-222-5432</td>
+                    <td class="admin-useractionbutton"><button class="adminpagebuttonformanage adminbuttonmargin-right" type="button" onclick="location.href='adminpage8sheltermodify-tom.html'">수정</button>
+                        <button class="adminpagebuttonformanage adminbuttonmargin-left" type="button" onclick="location.href='#'">삭제</button></td>
                 </tr>
                 <tr>
                     <td>2</td>
                     <td>강남 보호소</td>
                     <td>002-20-00010</td>
                     <td>031-222-5432</td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td><button style="margin: auto; border-style: none; cursor:pointer;" type="button" onclick="location.href='adminpage8sheltermodify-tom.html'">관리하기</button></td>
-                    <td><button style="margin: auto; border-style: none; cursor:pointer;" type="button" onclick="location.href='#'">삭제</button></td>
+                    <td><button class="adminpagebuttonformanage adminbuttonmargin-right" type="button" onclick="location.href='adminpage8sheltermodify-tom.html'">수정</button>
+                        <button class="adminpagebuttonformanage adminbuttonmargin-left" type="button" onclick="location.href='#'">삭제</button></td>
                 </tr>
                 <tr>
                     <td>3</td>
                     <td>분당 보호소</td>
                     <td>002-20-00010</td>
                     <td>031-222-5432</td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td><button style="margin: auto; border-style: none; cursor:pointer;" type="button" onclick="location.href='adminpage8sheltermodify-tom.html'">정보수정</button></td>
-                    <td><button style="margin: auto; border-style: none; cursor:pointer;" type="button" onclick="location.href='#'">삭제</button></td>
+                    <td><button class="adminpagebuttonformanage adminbuttonmargin-right" type="button" onclick="location.href='adminpage8sheltermodify-tom.html'">수정</button>
+                        <button class="adminpagebuttonformanage adminbuttonmargin-left" type="button" onclick="location.href='#'">삭제</button></td>
                 </tr>
                 <tr>
                     <td>4</td>
                     <td>송파 보호소</td>
                     <td>002-20-00010</td>
                     <td>031-222-5432</td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td><button style="margin: auto; border-style: none; cursor:pointer;" type="button" onclick="location.href='adminpage8sheltermodify-tom.html'">정보수정</button></td>
-                    <td><button style="margin: auto; border-style: none; cursor:pointer;" type="button" onclick="location.href='#'">삭제</button></td>
+                    <td><button class="adminpagebuttonformanage adminbuttonmargin-right" type="button" onclick="location.href='adminpage8sheltermodify-tom.html'">수정</button>
+                        <button class="adminpagebuttonformanage adminbuttonmargin-left" type="button" onclick="location.href='#'">삭제</button></td>
                 </tr>
                 <tr>
                     <td>5</td>
                     <td>종로 보호소</td>
                     <td>002-20-00010</td>
                     <td>031-222-5432</td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td><button style="margin: auto; border-style: none; cursor:pointer;" type="button" onclick="location.href='adminpage8sheltermodify-tom.html'">정보수정</button></td>
-                    <td><button style="margin: auto; border-style: none; cursor:pointer;" type="button" onclick="location.href='#'">삭제</button></td>
-                </tr>
+                    <td><button class="adminpagebuttonformanage adminbuttonmargin-right" type="button" onclick="location.href='adminpage8sheltermodify-tom.html'">수정</button>
+                        <button class="adminpagebuttonformanage adminbuttonmargin-left" type="button" onclick="location.href='#'">삭제</button></td>
+                  </tr>
               </tbody>   
           </table>
         </div>
         <div style="margin-top: 40px">
           <table style="margin-left:auto; margin-right:auto; text-align: center;">
               <tr>
-                  <td><button style="margin: auto; border-style: none; cursor:pointer;" type="button" onclick="location.href='adminpage7shelteradd-tom.html'">보호소 등록</button></td>
+                  <td><button class="adminpagebuttonformanage" type="button" onclick="location.href='adminpage7shelteradd-tom.html'">보호소 등록</button></td>
               </tr>
           </table>
         </div>
