--- a/freshshop-master_1차/adminpage9communitymanage-tom.html
+++ b/freshshop-master_1차/adminpage9communitymanage-tom.html
@@ -90,15 +90,15 @@
     <!-- End Navigation --> <!--관리자 페이지 공통 부분 완료...-->
   </header>
   <!--adminmainvetmanagement-->
-    <div> 
-        <h1 style="text-align: center; font-size:30px; margin-top:5%;">커뮤니티 게시판 관리</h1>
+  <div class="tbl-header"> 
+    <h1 class="adminpagetoph1">커뮤니티 게시판 관리</h1>
     </div>
         <!-- search 버튼 시작 -->
-        <div class="row">
+        <div class="row tbl-header">
           <div class="main-search-input-wrap" >
-              <div class="main-search-input fl-wrap" style="margin-top: 30px;">
+              <div class="main-search-input fl-wrap">
                   <div class="main-search-input-item"> 
-                      <input type="text" value="" placeholder="Search Products..."> 
+                      <input type="text" value="" placeholder="검색창입니다."> 
                   </div> 
                 <button class="main-search-button">Search</button>
               </div>
@@ -106,68 +106,62 @@
         </div>
         <!--search button finished...-->
         <!--회원정보 관리 리스트 시작-->
-      <div class="communitymanage" style="margin-top: 40px;">
-        <table class="table-striped table-hover" style="margin-left: 3%; margin-right: 3%; text-align: center;">
-          <colgroup style ="margin-left: auto; margin-right: auto;">
-            <col style="width:3%; height:2%;">
-            <col style="width:5%; height:2%;">
-            <col style="width:8%; height:2%;">
-<!--            <col style="width:12%; height:2%;">
-            <col style="width:8%; height:2%;">
-            <col style="width:14%; height:2%;">
-            <col style="width:8%; height:2%;">
-            <col style="width:4%; height:2%;"> 커뮤니티 계시판 이용을 위해 주석처리함... on Nov 30th, 14:35pm by thomas-->
-            <col style="width:10%; height:2%;">
-            <col style="width:7%; height:2%;">
-            <!--consider binding the custom-tom.css file. this comment was left on november 25th 20:34pm by thomas lee-->
-          </colgroup>
-          <thead class="admintablehead"> 
-            <tr>
-                <th>#</th>
-                <th>ID</th>
-                <th>제목</th>
-                <th>등록일</th>
-                <th>액션</th>
-            </tr>
-          </thead>
-          <tbody>
-            <tr>
-                <td>1</td>
-                <td>고결</td>
-                <td>안녕하세요</td>
-                <td>2021-11-24 16:54:38</td>
-                <td><button style="margin: auto; border-style: none; cursor:pointer;" type="button" onclick="location.href='adminpage10community-tom.html'">관리하기</button></td>
-            </tr>
-            <tr>
-                <td>2</td>
-                <td>이영호</td>
-                <td>헬로</td>
-                <td>2021-11-17</td>
-                <td><button style="margin: auto; border-style: none; cursor:pointer;" type="button" onclick="location.href='adminpage10community-tom.html'">관리하기</button></td>
-            </tr>
-            <tr>
-                <td>3</td>
-                <td>재석</td>
-                <td>guten morgen</td>
-                <td>2021-11-17</td>
-                <td><button style="margin: auto; border-style: none; cursor:pointer;" type="button" onclick="location.href='adminpage10community-tom.html'">관리하기</button></td>
-            </tr>
-            <tr>
-                <td>4</td>
-                <td>고결결고</td>
-                <td>안녕하시렵니까?</td>
-                <td>2021-11-17</td>
-                <td><button style="margin: auto; border-style: none; cursor:pointer;" type="button" onclick="location.href='adminpage10community-tom.html'">관리하기</button></td>
-            </tr>
-            <tr>
-                <td>5</td>
-                <td>고귤</td>
-                <td>히히히</td>
-                <td>2021-11-17</td>
-                <td><button style="margin: auto; border-style: none; cursor:pointer;" type="button" onclick="location.href='adminpage10community-tom.html'">관리하기</button></td>
-            </tr>
-          </tbody>
-        </table>
+      <div id="admincommunitymanage" class="adminpagetablediv">
+        <table class="table-striped table-hover adminpagetable">
+            <colgroup>
+              <col>
+              <col>
+              <col>
+              <col>
+              <col>
+            </colgroup>
+            <thead class="admintablehead"> 
+              <tr>
+                  <th class="admin-userseq">#</th>
+                  <th class="admin-userid">ID</th> 
+                  <th class="admin-usercommunityposttitle">제목</th>
+                  <th class="admin-usercommunitypostregdate">게시글 등록일</th>
+                  <th class="admin-useractionbutton"></th>
+              </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td class="admin-userseq">1</td>
+                    <td class="admin-userid">thomasleeismyid</td>
+                    <td class="admin-usercommunityposttitle">안녕하세요</td>
+                    <td class="admin-usercommunitypostregdate">2021-12-01 11:54:38</td>
+                    <td class="admin-useractionbutton"><button class="adminpagebuttonformanage" type="button" onclick="location.href='adminpage10community-tom.html'">수정</button></td>
+                </tr>
+                <tr>
+                    <td>2</td>
+                    <td>Jaeskaaaaa</td>
+                    <td>헬로</td>
+                    <td>2021-11-30 16:54:38</td>
+                    <td class="admin-useractionbutton"><button class="adminpagebuttonformanage" type="button" onclick="location.href='adminpage10community-tom.html'">수정</button></td>
+                </tr>
+                <tr>
+                    <td>3</td>
+                    <td>재석</td>
+                    <td>guten morgen</td>
+                    <td>2021-11-39 16:54:38</td>
+                    <td class="admin-useractionbutton"><button class="adminpagebuttonformanage" type="button" onclick="location.href='adminpage10community-tom.html'">수정</button></td>
+                </tr>
+                <tr>
+                    <td>4</td>
+                    <td>고결결고</td>
+                    <td>안녕하시렵니까?</td>
+                    <td>2021-11-28 16:54:38</td>
+                    <td class="admin-useractionbutton"><button class="adminpagebuttonformanage" type="button" onclick="location.href='adminpage10community-tom.html'">수정</button></td>
+                </tr>
+                <tr>
+                    <td>5</td>
+                    <td>고귤</td>
+                    <td>히히히</td>
+                    <td>2021-11-28 11:54:38</td>
+                    <td class="admin-useractionbutton"><button class="adminpagebuttonformanage" type="button" onclick="location.href='adminpage10community-tom.html'">수정</button></td>
+                </tr>
+              </tbody>
+          </table>
       </div>
       <!--page navigation-->
       <div class="row mt-2">
