Dec 1st at 8:37pm, jaeskaaa requested to identify and modify any duplicated css class name. this is the revised version of jsp and css file.

--- a/freshshop-master_1차/board-free_결.html
+++ b/freshshop-master_1차/board-free_결.html
@@ -94,7 +94,7 @@
 </div>
 <div class="container mt-5" style="width: 70%;">
     <div class="board-free" >
-        <div id="slides-shop" class="cover-slides">
+        <div id="slides-shop" class="cover-slides cover-slides-board-free">
             <ul class="slides-container">
                 <li class="text-center">
                     <img src="images/gyul_dog_img_001.jpg" alt="">
