--- a/freshshop-master_1차/hospital-partnership-은혜.html
+++ b/freshshop-master_1차/hospital-partnership-은혜.html
@@ -1,3 +1,37 @@
+Skip to content
+Search or jump to…
+Pull requests
+Issues
+Marketplace
+Explore
+ 
+@JAESKAAA 
+JAESKAAA
+/
+PawMap
+Public
+1
+13
+Code
+Issues
+11
+Pull requests
+Discussions
+Actions
+Projects
+1
+Wiki
+Security
+Insights
+Settings
+PawMap/freshshop-master_1차/hospital-partnership-은혜.html
+
+help-Extinguisher 02 unene html 이름변경
+Latest commit c923b27 14 days ago
+ History
+ 0 contributors
+380 lines (316 sloc)  15 KB
+   
 <!DOCTYPE html>
 <html lang="ko">
 <!-- Basic -->
@@ -178,6 +212,108 @@
     <!-- 병원정보 부분 끝 -->
 
 
+    <!-- 기타 수의사 정보 시작 -->
+  <div class="container" id="menu2">
+    <div class="row my-5">
+      <div class="col-sm-6 col-lg-4">
+          <div class="service-block-inner">
+              <h3>수의사(3)</h3>
+          </div>
+      </div>
+
+      <!-- 수의사 프로필 부분 -->
+      <div class="container" style="margin-top: -5%; margin-bottom: -3%;">
+        <div class="row profile" >
+        <div class="col-md-4" >
+          <div class="profile-sidebar">
+            <!-- SIDEBAR USERPIC -->
+            <div class="profile-userpic">
+              <img src="images/01.jpg" class="img-responsive" alt="">
+            </div>
+            <!-- END SIDEBAR USERPIC -->
+            <!-- SIDEBAR USER TITLE -->
+            <div class="profile-usertitle">
+              <div class="profile-usertitle-name">
+                최재석
+              </div>
+              <div class="profile-usertitle-job">
+                관절전문
+              </div>
+            </div>
+            <!-- END SIDEBAR USER TITLE -->
+            <!-- SIDEBAR BUTTONS -->
+            <div class="profile-userbuttons">
+              <button type="button" class="btn btn-primary btn-rounded btn-sm" data-mdb-ripple-color="#ffffff" style="background-color: #e4b407">
+              약력보기
+            </button>
+            <button type="button" class="btn btn-primary btn-rounded btn-sm" data-mdb-ripple-color="#ffffff" style="background-color: #e4b407">
+              이 의사 리뷰보기
+            </button>
+            </div>
+            </div>
+            </div>
+
+
+          <div class="col-md-4">
+          <div class="profile-sidebar">
+            <!-- SIDEBAR USERPIC -->
+            <div class="profile-userpic">
+              <img src="images/02.png" class="img-responsive" alt="">
+            </div>
+            <!-- END SIDEBAR USERPIC -->
+            <!-- SIDEBAR USER TITLE -->
+            <div class="profile-usertitle">
+              <div class="profile-usertitle-name">
+                지은혜
+              </div>
+              <div class="profile-usertitle-job">
+                안구전문
+              </div>
+            </div>
+            <!-- END SIDEBAR USER TITLE -->
+            <!-- SIDEBAR BUTTONS -->
+            <div class="profile-userbuttons">
+              <button type="button" class="btn btn-primary btn-rounded btn-sm" data-mdb-ripple-color="#ffffff" style="background-color: #e4b407">
+              약력보기
+            </button>
+            <button type="button" class="btn btn-primary btn-rounded btn-sm" data-mdb-ripple-color="#ffffff" style="background-color: #e4b407">
+              이 의사 리뷰보기
+            </button>
+            </div>
+            </div>
+            </div>
+
+          <div class="col-md-4">
+            <div class="profile-sidebar">
+              <!-- SIDEBAR USERPIC -->
+              <div class="profile-userpic">
+                <img src="images/03.png" class="img-responsive" alt="">
+              </div>
+              <!-- END SIDEBAR USERPIC -->
+              <!-- SIDEBAR USER TITLE -->
+              <div class="profile-usertitle">
+                <div class="profile-usertitle-name">
+                  이영호
+                </div>
+                <div class="profile-usertitle-job">
+                  피부전문
+                </div>
+              </div>
+              <!-- END SIDEBAR USER TITLE -->
+              <!-- SIDEBAR BUTTONS -->
+              <div class="profile-userbuttons">
+                <button type="button" class="btn btn-primary btn-rounded btn-sm" data-mdb-ripple-color="#ffffff" style="background-color: #e4b407">
+                약력보기
+              </button>
+              <button type="button" class="btn btn-primary btn-rounded btn-sm" data-mdb-ripple-color="#ffffff" style="background-color: #e4b407">
+                이 의사 리뷰보기
+              </button>
+              </div>
+              </div>
+              </div>
+            <!-- END SIDEBAR BUTTONS -->
+            <!-- 수의사 프로필부분 끝 -->
+
 
 
 
@@ -185,44 +321,42 @@
       <div class="container" id="menu3">
         <div class="row my-5">
           <div class="col-sm-6 col-lg-4" style="margin-bottom: -5%; margin-top: -5%;" >
-            <div class="service-block-inner">
-              <h3>리뷰(5)</h3>
-            </div>
-          </div>
-        </div>
+              <div class="service-block-inner">
+                  <h3>리뷰(5)</h3>
+                </div>
+              </div>
+              </div>
               <!-- 리뷰 표출부분 -->
-        <div class="card-body" style="width: 500px; position: absolute; left: 50%; transform: translateX(-50%);">
-          <div class="media mb-3">
-            <div class="mr-2"> 
-              <img class="rounded-circle border p-1" src="data:image/svg+xml;charset=UTF-8,%3Csvg%20width%3D%2264%22%20height%3D%2264%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20viewBox%3D%220%200%2064%2064%22%20preserveAspectRatio%3D%22none%22%3E%3Cdefs%3E%3Cstyle%20type%3D%22text%2Fcss%22%3E%23holder_160c142c97c%20text%20%7B%20fill%3Argba(255%2C255%2C255%2C.75)%3Bfont-weight%3Anormal%3Bfont-family%3AHelvetica%2C%20monospace%3Bfont-size%3A10pt%20%7D%20%3C%2Fstyle%3E%3C%2Fdefs%3E%3Cg%20id%3D%22holder_160c142c97c%22%3E%3Crect%20width%3D%2264%22%20height%3D%2264%22%20fill%3D%22%23777%22%3E%3C%2Frect%3E%3Cg%3E%3Ctext%20x%3D%2213.5546875%22%20y%3D%2236.5%22%3E64x64%3C%2Ftext%3E%3C%2Fg%3E%3C%2Fg%3E%3C%2Fsvg%3E" alt="Generic placeholder image">
-            </div>
-            <div class="media-body">
-              <p>코딩이 맛있고 강사님이 친절해요</p>
-              <small class="text-muted">받은 치료 : 코딩</small>
-            </div>
-          </div>
-          <hr>
-          <div class="media mb-3">
-            <div class="mr-2"> 
-              <img class="rounded-circle border p-1" src="data:image/svg+xml;charset=UTF-8,%3Csvg%20width%3D%2264%22%20height%3D%2264%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20viewBox%3D%220%200%2064%2064%22%20preserveAspectRatio%3D%22none%22%3E%3Cdefs%3E%3Cstyle%20type%3D%22text%2Fcss%22%3E%23holder_160c142c97c%20text%20%7B%20fill%3Argba(255%2C255%2C255%2C.75)%3Bfont-weight%3Anormal%3Bfont-family%3AHelvetica%2C%20monospace%3Bfont-size%3A10pt%20%7D%20%3C%2Fstyle%3E%3C%2Fdefs%3E%3Cg%20id%3D%22holder_160c142c97c%22%3E%3Crect%20width%3D%2264%22%20height%3D%2264%22%20fill%3D%22%23777%22%3E%3C%2Frect%3E%3Cg%3E%3Ctext%20x%3D%2213.5546875%22%20y%3D%2236.5%22%3E64x64%3C%2Ftext%3E%3C%2Fg%3E%3C%2Fg%3E%3C%2Fsvg%3E" alt="Generic placeholder image">
-            </div>
-            <div class="media-body">
-              <p>코딩이 맛있고 강사님이 친절해요</p>
-              <small class="text-muted">받은 치료 : 코딩</small>
-            </div>
-            </div>
-            <hr>
-            <div class="media mb-3">
-              <div class="mr-2"> 
-                <img class="rounded-circle border p-1" src="data:image/svg+xml;charset=UTF-8,%3Csvg%20width%3D%2264%22%20height%3D%2264%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20viewBox%3D%220%200%2064%2064%22%20preserveAspectRatio%3D%22none%22%3E%3Cdefs%3E%3Cstyle%20type%3D%22text%2Fcss%22%3E%23holder_160c142c97c%20text%20%7B%20fill%3Argba(255%2C255%2C255%2C.75)%3Bfont-weight%3Anormal%3Bfont-family%3AHelvetica%2C%20monospace%3Bfont-size%3A10pt%20%7D%20%3C%2Fstyle%3E%3C%2Fdefs%3E%3Cg%20id%3D%22holder_160c142c97c%22%3E%3Crect%20width%3D%2264%22%20height%3D%2264%22%20fill%3D%22%23777%22%3E%3C%2Frect%3E%3Cg%3E%3Ctext%20x%3D%2213.5546875%22%20y%3D%2236.5%22%3E64x64%3C%2Ftext%3E%3C%2Fg%3E%3C%2Fg%3E%3C%2Fsvg%3E" alt="Generic placeholder image">
-              </div>
-              <div class="media-body">
-                <p>코딩이 맛있고 강사님이 친절해요</p>
-                <small class="text-muted">받은 치료 : 코딩</small>
-              </div>
-            </div>
-          </div>
-        </div>
+                <div class="card-body" style="width: 500px; position: absolute; left: 50%; transform: translateX(-50%);">
+                  <div class="media mb-3">
+                    <div class="mr-2"> 
+                      <img class="rounded-circle border p-1" src="data:image/svg+xml;charset=UTF-8,%3Csvg%20width%3D%2264%22%20height%3D%2264%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20viewBox%3D%220%200%2064%2064%22%20preserveAspectRatio%3D%22none%22%3E%3Cdefs%3E%3Cstyle%20type%3D%22text%2Fcss%22%3E%23holder_160c142c97c%20text%20%7B%20fill%3Argba(255%2C255%2C255%2C.75)%3Bfont-weight%3Anormal%3Bfont-family%3AHelvetica%2C%20monospace%3Bfont-size%3A10pt%20%7D%20%3C%2Fstyle%3E%3C%2Fdefs%3E%3Cg%20id%3D%22holder_160c142c97c%22%3E%3Crect%20width%3D%2264%22%20height%3D%2264%22%20fill%3D%22%23777%22%3E%3C%2Frect%3E%3Cg%3E%3Ctext%20x%3D%2213.5546875%22%20y%3D%2236.5%22%3E64x64%3C%2Ftext%3E%3C%2Fg%3E%3C%2Fg%3E%3C%2Fsvg%3E" alt="Generic placeholder image">
+                    </div>
+                    <div class="media-body">
+                      <p>코딩이 맛있고 강사님이 친절해요</p>
+                      <small class="text-muted">받은 치료 : 코딩</small>
+                    </div>
+                  </div>
+                  <hr>
+                  <div class="media mb-3">
+                    <div class="mr-2"> 
+                      <img class="rounded-circle border p-1" src="data:image/svg+xml;charset=UTF-8,%3Csvg%20width%3D%2264%22%20height%3D%2264%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20viewBox%3D%220%200%2064%2064%22%20preserveAspectRatio%3D%22none%22%3E%3Cdefs%3E%3Cstyle%20type%3D%22text%2Fcss%22%3E%23holder_160c142c97c%20text%20%7B%20fill%3Argba(255%2C255%2C255%2C.75)%3Bfont-weight%3Anormal%3Bfont-family%3AHelvetica%2C%20monospace%3Bfont-size%3A10pt%20%7D%20%3C%2Fstyle%3E%3C%2Fdefs%3E%3Cg%20id%3D%22holder_160c142c97c%22%3E%3Crect%20width%3D%2264%22%20height%3D%2264%22%20fill%3D%22%23777%22%3E%3C%2Frect%3E%3Cg%3E%3Ctext%20x%3D%2213.5546875%22%20y%3D%2236.5%22%3E64x64%3C%2Ftext%3E%3C%2Fg%3E%3C%2Fg%3E%3C%2Fsvg%3E" alt="Generic placeholder image">
+                    </div>
+                    <div class="media-body">
+                      <p>코딩이 맛있고 강사님이 친절해요</p>
+                      <small class="text-muted">받은 치료 : 코딩</small>
+                    </div>
+                  </div>
+                  <hr>
+                  <div class="media mb-3">
+                    <div class="mr-2"> 
+                      <img class="rounded-circle border p-1" src="data:image/svg+xml;charset=UTF-8,%3Csvg%20width%3D%2264%22%20height%3D%2264%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20viewBox%3D%220%200%2064%2064%22%20preserveAspectRatio%3D%22none%22%3E%3Cdefs%3E%3Cstyle%20type%3D%22text%2Fcss%22%3E%23holder_160c142c97c%20text%20%7B%20fill%3Argba(255%2C255%2C255%2C.75)%3Bfont-weight%3Anormal%3Bfont-family%3AHelvetica%2C%20monospace%3Bfont-size%3A10pt%20%7D%20%3C%2Fstyle%3E%3C%2Fdefs%3E%3Cg%20id%3D%22holder_160c142c97c%22%3E%3Crect%20width%3D%2264%22%20height%3D%2264%22%20fill%3D%22%23777%22%3E%3C%2Frect%3E%3Cg%3E%3Ctext%20x%3D%2213.5546875%22%20y%3D%2236.5%22%3E64x64%3C%2Ftext%3E%3C%2Fg%3E%3C%2Fg%3E%3C%2Fsvg%3E" alt="Generic placeholder image">
+                    </div>
+                    <div class="media-body">
+                      <p>코딩이 맛있고 강사님이 친절해요</p>
+                      <small class="text-muted">받은 치료 : 코딩</small>
+                    </div>
+                  </div>
                   <br><br><br>
 
                   <!-- 리뷰 끝 -->
@@ -278,3 +412,16 @@
 </body>
 
 </html>
+© 2021 GitHub, Inc.
+Terms
+Privacy
+Security
+Status
+Docs
+Contact GitHub
+Pricing
+API
+Training
+Blog
+About
+Loading complete
