dec 8th 14:26pm

--- a/freshshop-master_1차/adminpage2vetmange-tom.html
+++ b/freshshop-master_1차/adminpage2vetmange-tom.html
@@ -93,7 +93,11 @@
   </header>
   <!--관리자의 제휴 병원 관리 리스트 페이지 시작-->
         <div class="tbl-header"> 
-            <h1 class="adminpagetoph1">제휴 병원 관리</h1>
+          <div class="row row-adminindex">
+            <div>
+              <h1 class="adminpagetoph1" style=" margin-top: 0px;">제휴 병원 관리</h1>
+            </div>
+          </div>
         </div>
         <!-- search 버튼 시작 -->
         <div class="row tbl-header">
