--- a/freshshop-master_1차/adminpage4usermanage-tom.html
+++ b/freshshop-master_1차/adminpage4usermanage-tom.html
@@ -92,9 +92,13 @@
     <!-- End Navigation --> <!--관리자 페이지 공통 부분 완료...-->
   </header>
   <!--관리자의 회원정보 관리 페이지 시작...-->
-  <div class="tbl-header"> 
-    <h1 class="adminpagetoph1">회원정보 관리</h1>
-    </div>
+        <div class="tbl-header"> 
+          <div class="row row-adminindex">
+            <div>
+              <h1 class="adminpagetoph1" style=" margin-top: 0px;">회원정보 관리</h1>
+            </div>
+          </div>
+        </div>
         <!-- search 버튼 시작 -->
         <div class="row tbl-header">
           <div class="main-search-input-wrap" >
