--- a/freshshop-master_1차/adminpage6sheltermanage-tom.html
+++ b/freshshop-master_1차/adminpage6sheltermanage-tom.html
@@ -80,8 +80,6 @@
                   <li class="nav-item"><a class="nav-link" href="adminpage4usermanage-tom.html"> 회원정보 관리</a></li>
                   <li class="nav-item"><a class="nav-link" href="adminpage6sheltermanage-tom.html"> 보호소정보 관리</a></li>
                   <li class="nav-item"><a class="nav-link" href="adminpage9communitymanage-tom.html"> 커뮤니티 게시판 관리</a></li>
-                  <li class="nav-item"><a class="nav-link" href="adminpage11counseloneonone-tom.html"> 1:1 상담 관리</a></li>
-                  <li class="nav-item"><a class="nav-link" href="adminpage13donationmanage-tom.html"> 후원금 관리</a></li>
                 </ul>
             </div>
             <!-- /.navbar-collapse -->
@@ -90,9 +88,13 @@
     <!-- End Navigation --> <!--관리자 페이지 공통 부분 완료...-->
   </header>
   <!--보호소정보관리 페이지 시작-->
-  <div class="tbl-header"> 
-    <h1 class="adminpagetoph1">보호소정보 관리</h1>
-    </div>
+      <div class="tbl-header"> 
+        <div class="row row-adminindex">
+          <div>
+            <h1 class="adminpagetoph1" style=" margin-top: 0px;">보호소정보 관리</h1>
+          </div>
+        </div>
+      </div>
         <!-- search 버튼 시작 -->
         <div class="row tbl-header">
           <div class="main-search-input-wrap" >
