--- a/freshshop-master_1차/adminpage9communitymanage-tom-backup.html
+++ b/freshshop-master_1차/adminpage9communitymanage-tom-backup.html
@@ -80,6 +80,8 @@
                     <li class="nav-item"><a class="nav-link" href="adminpage4usermanage-tom.html"> 회원정보 관리</a></li>
                     <li class="nav-item"><a class="nav-link" href="adminpage6sheltermanage-tom.html"> 보호소정보 관리</a></li>
                     <li class="nav-item"><a class="nav-link" href="adminpage9communitymanage-tom.html"> 커뮤니티 게시판 관리</a></li>
+                    <li class="nav-item"><a class="nav-link" href="adminpage11counseloneonone-tom.html"> 1:1 상담 관리</a></li>
+                    <li class="nav-item"><a class="nav-link" href="adminpage13donationmanage-tom.html"> 후원금 관리</a></li>
                 </ul>
             </div>
             <!-- /.navbar-collapse -->
@@ -88,104 +90,102 @@
     <!-- End Navigation --> <!--관리자 페이지 공통 부분 완료...-->
   </header>
   <!--adminmainvetmanagement-->
-              <!--관리자의 커뮤니티 관리 페이지 시작...-->
-              <div class="tbl-header"> 
-                <div class="row row-adminindex">
-                  <div>
-                    <h1 class="adminpagetoph1" style=" margin-top: 0px;">커뮤니티 게시판 관리</h1>
-                  </div>
-                  <div>
-                    <h1 class="adminpagetoph1" style="margin-left: 20px; margin-right: 20px; margin-top: 0px"> - </h1>
-                  </div>
-                  <div>  
-                    <h1 class="adminpagetoph1" style="margin-top: 0px;">공지게시판</h1><!--select tag에 있는 option들이 하기에 버튼을 누르면 자연스럽게 이 영역도 바뀌어야 함. dec 7th 19:38pm-->
-                  </div>
-                </div>
+  <div class="tbl-header"> 
+    <div class="row row-adminindex">
+      <div>
+        <h1 class="adminpagetoph1" style="margin-right: 10px;">커뮤니티 게시판 관리</h1>
+      </div>
+      <div>
+        <h1 class="adminpagetoph1" style="margin-left: 10px;">공지게시판</h1><!--select tag에 있는 option들이 하기에 버튼을 누르면 자연스럽게 이 영역도 바뀌어야 함. dec 7th 19:38pm-->
+      </div>
+    </div>
+  </div>
+        <!-- search 버튼 시작 -->
+        <div class="row tbl-header">
+          <div class="main-search-input-wrap" >
+              <div class="main-search-input fl-wrap">
+                  <div class="main-search-input-item"> 
+                      <input type="text" value="" placeholder="검색창입니다."> 
+                  </div> 
+                <button class="main-search-button">Search</button>
               </div>
-                <!-- search 영역 시작-->
-                <div class="row tbl-header">
-                  <div class="main-search-input-wrap" >
-                    <table>
-                      <tr>
-                        <!--게시판 select 창 시작-->
-                        <td style="padding-right: 10px;">
-                          <select class="main-search-input-select fl-wrap main-search-input-item" style="border-style:none;">
-                            <option>-관리할 게시판을 선택하세요-</option>
-                            <option>공지 게시판</option>
-                            <option>나눔 게시판</option>
-                            <option>자유 게시판</option>
-                          </select>
-                        </td>
-                        <!--select 창 끝-->
-                        <!--search 타입 영역 시작-->
-                        <td style="padding-left: 10px;">
-                          <div class="main-search-input fl-wrap">
-                            <div class="main-search-input-item"> 
-                                <input type="text" value="" placeholder="검색창입니다."> 
-                            </div> 
-                            <!-- search 타입 영역 끝-->
-                            <!-- search 버튼 시작 -->
-                          <button class="main-search-button">Search</button>
-                          <!-- search 버튼 끝 -->
-                        </div>
-                        </td>
-                      </tr>
-                    </table>
-                  </div>
-                </div>
-                <!--search 영역 finished...-->
-                <!--커뮤니티 게시판 관리 리스트 시작--><!--목록 영역...-->
-              <div id="associatedvetcenterlist" class="adminpagetablediv">
-                <table class="table-striped table-hover adminpagetable">
-                  <colgroup>
-                    <col>
-                    <col>
-                    <col>
-                    <col>
-                    <col>
-                    <col>
-                  </colgroup>
-                  <thead class="admintablehead"> 
-                    <tr>
-                        <th class="admin-userseq">#</th> <!--admin-userseq는 shelter_Seq동일-->
-                        <th class="admin-username">보호소 이름</th> <!--admin-username은 shelter_name과 동일-->
-                        <th class="admin-address">보호소 주소</th> <!--admin-address은 shelter_address와 동일-->
-                        <th class="admin-usertelnum">연락처</th> <!--admin-usertelnum은 shelter_tel과 동일-->
-                        <th class="admin-comnum">사업자등록번호</th>
-                        <th class="admin-useractionbutton"></th>
-                    </tr>
-                  </thead>
-                  <tbody>
-                    <c:forEach var="user" items="${shelterList }"> <!--items needs to be replace...-->
-                      <tr>
-                        <td class="admin-userseq">${user.shelterSeq }</td>
-                        <td class="admin-username">${user.shelterName }</td>
-                        <td class="admin-address">${user.address }</td>
-                        <td class="admin-usertelnum">${user.shelterTel }</td>
-                        <td class="admin-comnum">${user.comNum }</td>
-                        <td class="admin-useractionbutton"><button class="adminpagebuttonformanage adminbuttonmargin-right" type="button" onclick="location.href='#'">수정</button>
-                                                          <button class="adminpagebuttonformanage adminbuttonmargin-left" type="button" onclick="location.href='#'">삭제</button></td>
-                      </tr>
-                    </c:forEach>
-                  </tbody>            
-                </table>
-              </div>
-              <!--page navigation-->
-              <div class="row mt-2">
-              <div class="col-12" style="margin-top: 40px;">
-                <nav aria-label="Page navigation example">
-                  <ul class="pagination justify-content-center">
-                      <li class="page-item"><a class="page-link" href="#">Previous</a></li>
-                      <li class="page-item"><a class="page-link" href="#">1</a></li>
-                      <li class="page-item"><a class="page-link" href="#">2</a></li>
-                      <li class="page-item"><a class="page-link" href="#">3</a></li>
-                      <li class="page-item"><a class="page-link" href="#">4</a></li>
-                      <li class="page-item"><a class="page-link" href="#">5</a></li>
-                      <li class="page-item"><a class="page-link" href="#">Next</a></li>
-                  </ul>
-                </nav>
-              </div>
-              </div>
+          </div>
+        </div>
+        <!--search button finished...-->
+        <!--회원정보 관리 리스트 시작-->
+      <div id="admincommunitymanage" class="adminpagetablediv">
+        <table class="table-striped table-hover adminpagetable">
+            <colgroup>
+              <col>
+              <col>
+              <col>
+              <col>
+              <col>
+            </colgroup>
+            <thead class="admintablehead"> 
+              <tr>
+                  <th class="admin-userseq">#</th>
+                  <th class="admin-userid">ID</th> 
+                  <th class="admin-usercommunityposttitle">제목</th>
+                  <th class="admin-usercommunitypostregdate">게시글 등록일</th>
+                  <th class="admin-useractionbutton"></th>
+              </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td class="admin-userseq">1</td>
+                    <td class="admin-userid">thomasleeismyid</td>
+                    <td class="admin-usercommunityposttitle">안녕하세요</td>
+                    <td class="admin-usercommunitypostregdate">2021-12-01 11:54:38</td>
+                    <td class="admin-useractionbutton"><button class="adminpagebuttonformanage" type="button" onclick="location.href='adminpage10community-tom.html'">수정</button></td>
+                </tr>
+                <tr>
+                    <td>2</td>
+                    <td>Jaeskaaaaa</td>
+                    <td>헬로</td>
+                    <td>2021-11-30 16:54:38</td>
+                    <td class="admin-useractionbutton"><button class="adminpagebuttonformanage" type="button" onclick="location.href='adminpage10community-tom.html'">수정</button></td>
+                </tr>
+                <tr>
+                    <td>3</td>
+                    <td>재석</td>
+                    <td>guten morgen</td>
+                    <td>2021-11-39 16:54:38</td>
+                    <td class="admin-useractionbutton"><button class="adminpagebuttonformanage" type="button" onclick="location.href='adminpage10community-tom.html'">수정</button></td>
+                </tr>
+                <tr>
+                    <td>4</td>
+                    <td>고결결고</td>
+                    <td>안녕하시렵니까?</td>
+                    <td>2021-11-28 16:54:38</td>
+                    <td class="admin-useractionbutton"><button class="adminpagebuttonformanage" type="button" onclick="location.href='adminpage10community-tom.html'">수정</button></td>
+                </tr>
+                <tr>
+                    <td>5</td>
+                    <td>고귤</td>
+                    <td>히히히</td>
+                    <td>2021-11-28 11:54:38</td>
+                    <td class="admin-useractionbutton"><button class="adminpagebuttonformanage" type="button" onclick="location.href='adminpage10community-tom.html'">수정</button></td>
+                </tr>
+              </tbody>
+          </table>
+      </div>
+      <!--page navigation-->
+      <div class="row mt-2">
+        <div class="col-12" style="margin-top: 40px;">
+          <nav aria-label="Page navigation example">
+            <ul class="pagination justify-content-center">
+                <li class="page-item"><a class="page-link" href="#">Previous</a></li>
+                <li class="page-item"><a class="page-link" href="#">1</a></li>
+                <li class="page-item"><a class="page-link" href="#">2</a></li>
+                <li class="page-item"><a class="page-link" href="#">3</a></li>
+                <li class="page-item"><a class="page-link" href="#">4</a></li>
+                <li class="page-item"><a class="page-link" href="#">5</a></li>
+                <li class="page-item"><a class="page-link" href="#">Next</a></li>
+            </ul>
+          </nav>
+        </div>
+      </div>
   
 
   
